Clean up test, increase likelihood of cross generational references